# Forge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.json
files/cpp/run/: main.txt
source/: argparse.hpp  main.cpp
source/argparse/: argparse.cpp  argparse.hpp
source/forge/: createProj.cpp  forge.cpp  forge.hpp  installPackage.cpp
source/main/: forge.cpp
src/executables/: Analyze.hpp  Build.cpp  Build.hpp  Config.hpp  Install.cpp  Install.hpp  InstallPackage.hpp  New.hpp  Publish.hpp  Test.hpp  publish.cpp  runProj.cpp  utils.hpp
src/files/CMake/: init.cmake  run.cmake
src/files/cpp/run/: lib.txt
src/main/: forge.cpp
